# wish_link

./: .gitignore  alembic.ini  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/auth/: dependencies.py
app/dao/: base.py
app/gifts/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 2025_01_28_1303-4b46f0be6fc6_initial_migration.py  2025_01_30_1320-91aadeefd67a_foreign_key_user_id.py  2025_03_03_1351-c2b4b8026096_models.py
app/users/: auth.py  dao.py  models.py  router.py  schemas.py
app/wishlists/: dao.py  models.py  router.py  schemas.py
