[project]
name = "wish_link"
version = "0.1.0"
description = "App for your wish !"
authors = [
    {name = "adrlksv",email = "Qwerty123Andrey@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "bcrypt (==4.0.1)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-jwt (>=4.1.0,<5.0.0)",
    "alembic (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
